fix: enforce administrator role at the API boundary